@@ -1,3 +1,6 @@
+* Tue Feb 06 2007 Jesse Keating <jkeating@redhat.com>
+- yum bestPackagesFromList takes an arch argument. Fixes ppc64 bug
+
 * Sat Feb 03 2007 Jesse Keating <jkeating@redhat.com>
 - Be able to opt-out of a bugurl since buildinstall supports this
 - Make isodir an object of pungi (wwoods)
